--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.fc9570e3.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2ad99660.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.f9ae002e.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0b5fb0c9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.a4b2eb7b.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.f7848163.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43420c14.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.1bfbbb6e.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.e273323d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1a5vvsu = {
+					__sveltekit_91slth = {
 						base: "",
 						env: {}
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.fc9570e3.js"),
-						import("/_app/immutable/entry/app.f7848163.js")
+						import("/_app/immutable/entry/start.2ad99660.js"),
+						import("/_app/immutable/entry/app.e273323d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
